--- a/odb-sdk/plugins/resgen/CMakeLists.txt
+++ b/odb-sdk/plugins/resgen/CMakeLists.txt
@@ -47,7 +47,7 @@ macro (odb_resgen_target name)
             DEPENDS
                 odb-resgen
                 ${odb_resgen_target_arg_INPUT}
-            COMMENT "[odb-resgen] Generating resource strings for ${name}"
+            COMMENT "[odb-resgen] Generating resource strings ${PROJECT_BINARY_DIR}/odbres.rc"
             VERBATIM)
         set (ODB_RESGEN_${name}_OUTPUTS ${PROJECT_BINARY_DIR}/odbres.rc)
     else ()
@@ -61,7 +61,7 @@ macro (odb_resgen_target name)
             DEPENDS
                 odb-resgen
                 ${odb_resgen_target_arg_INPUT}
-            COMMENT "[odb-resgen] Generating resource strings for ${name}"
+            COMMENT "[odb-resgen] Generating resource strings ${PROJECT_BINARY_DIR}/odbres"
             VERBATIM)
 
         add_custom_command (OUTPUT ${PROJECT_BINARY_DIR}/odbres.o
@@ -75,7 +75,7 @@ macro (odb_resgen_target name)
                 odbres odbres.o
             WORKING_DIRECTORY ${PROJECT_BINARY_DIR}
             DEPENDS ${PROJECT_BINARY_DIR}/odbres
-            COMMENT "[odb-resgen] Compiling resource strings for ${name}"
+            COMMENT "[odb-resgen] Compiling resource strings ${PROJECT_BINARY_DIR}/odbres.o"
             VERBATIM)
         set (ODB_RESGEN_${name}_OUTPUTS ${PROJECT_BINARY_DIR}/odbres.o)
     endif ()
