--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -160,12 +160,14 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "include/odb-compiler/sdk/cmd_cache.h"
     "include/odb-compiler/sdk/cmd_list.h"
     "include/odb-compiler/sdk/plugin_list.h"
+    "include/odb-compiler/sdk/type.h"
     "src/sdk/cmd_cache.c"
     "src/sdk/cmd_list.c"
     "src/sdk/cmd_loader.cpp"
     "src/sdk/cmd_loader_dbpro.cpp"
     "src/sdk/cmd_loader_odb.cpp"
     "src/sdk/plugin_list.c"
+    "src/sdk/type.c"
 
     "include/odb-compiler/parser/db_keyword.h"
     "include/odb-compiler/parser/db_parser.h"
