Better excerpts in log

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ endif ()
 
 # Global options that affect subprojects
 option (ODB_TESTS "Enable/disable unit tests in all subprojects" ON)
+option (ODB_EDITOR "Build the code editor" OFF)
 set (ODB_VERSION "0.0.1" CACHE STRING "OpenDarkBASIC version")
 
 project ("OpenDarkBASIC"
@@ -71,5 +72,7 @@ add_subdirectory ("odb-cli")
 add_subdirectory ("odb-resgen")
 add_subdirectory ("odb-runtime")
 add_subdirectory ("odb-plugins")
-add_subdirectory ("odb-editor")
+if (ODB_EDITOR)
+    add_subdirectory ("odb-editor")
+endif ()
 #add_subdirectory ("odb-interpreter")
