--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,20 +59,19 @@ if (ODB_TESTS)
     FetchContent_Declare (
         googletest
         URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.tar.gz
-        URL_HASH SHA256=8ad598c73ad796e0d8280b082cebd82a630d73e73cd3c70057938a6501bba5d7
-)
+        URL_HASH SHA256=8ad598c73ad796e0d8280b082cebd82a630d73e73cd3c70057938a6501bba5d7)
     FetchContent_MakeAvailable (googletest)
     add_subdirectory ("odb-tests")
 endif ()
 
 add_subdirectory ("thirdparty/gperf-3.1")
 add_subdirectory ("odb-sdk")
-add_subdirectory ("odb-compiler")
-add_subdirectory ("odb-cli")
-add_subdirectory ("odb-resgen")
-add_subdirectory ("odb-runtime")
-add_subdirectory ("odb-plugins")
+#add_subdirectory ("odb-compiler")
+#add_subdirectory ("odb-cli")
+#add_subdirectory ("odb-resgen")
+#add_subdirectory ("odb-runtime")
+#add_subdirectory ("odb-plugins")
 if (ODB_EDITOR)
-    add_subdirectory ("odb-editor")
+    #add_subdirectory ("odb-editor")
 endif ()
 #add_subdirectory ("odb-interpreter")
