Reworking log functions a bit, added ability to modify excerpts with new inserts for help purposes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,6 @@ add_subdirectory ("odb-resgen")
 add_subdirectory ("odb-runtime")
 add_subdirectory ("odb-plugins")
 if (ODB_EDITOR)
-    add_subdirectory ("odb-editor")
+    #add_subdirectory ("odb-editor")
 endif ()
 #add_subdirectory ("odb-interpreter")
