Adding more for loop tests

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -243,12 +243,13 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "include/odb-compiler/semantic/semantic.h"
     "src/semantic/semantic.c"
     "src/semantic/expand_constant_declarations.c"
+    "src/semantic/loop_exit.c"
     "src/semantic/resolve_cmd_overloads.c"
-    "src/semantic/type_check_and_cast.c"
-    "src/semantic/type_check_and_cast_assignment.c"
-    "src/semantic/type_check_and_cast_binop_symmetric.c"
-    "src/semantic/type_check_and_cast_binop_pow.c"
-    "src/semantic/type_check_and_cast_casts.c"
+    "src/semantic/type_check.c"
+    "src/semantic/type_check_assignment.c"
+    "src/semantic/type_check_binop_symmetric.c"
+    "src/semantic/type_check_binop_pow.c"
+    "src/semantic/type_check_casts.c"
     #"src/astpost/EliminateBitwiseNotRHS.cpp"
     #"src/astpost/EliminateBitwiseNotRHS.cpp"
     #"src/astpost/EnforceSingleDefaultCase.cpp"
@@ -492,12 +493,15 @@ if (ODBCOMPILER_TESTS)
         "tests/src/semantic/loop_for_warnings.cpp"
         "tests/src/semantic/loop_for_errors.cpp"
         "tests/src/semantic/loop_exit.cpp"
-        "tests/src/semantic/type_check_and_cast_assignment.cpp"
-        "tests/src/semantic/type_check_and_cast_assignment_warnings.cpp"
-        "tests/src/semantic/type_check_and_cast_assignment_errors.cpp"
-        "tests/src/semantic/type_check_and_cast_binop_pow.cpp"
-        "tests/src/semantic/type_check_and_cast_binop_pow_warnings.cpp"
-        "tests/src/semantic/type_check_and_cast_binop_pow_errors.cpp"
+        "tests/src/semantic/loop_exit_errors.cpp"
+        "tests/src/semantic/loop_exit_for.cpp"
+        "tests/src/semantic/loop_exit_for_errors.cpp"
+        "tests/src/semantic/type_check_assignment.cpp"
+        "tests/src/semantic/type_check_assignment_warnings.cpp"
+        "tests/src/semantic/type_check_assignment_errors.cpp"
+        "tests/src/semantic/type_check_binop_pow.cpp"
+        "tests/src/semantic/type_check_binop_pow_warnings.cpp"
+        "tests/src/semantic/type_check_binop_pow_errors.cpp"
         "tests/src/semantic/resolve_cmd_overloads.cpp"
         "tests/src/semantic/resolve_cmd_overloads_warnings.cpp"
         "tests/src/semantic/resolve_cmd_overloads_errors.cpp")
