--- a/odb-compiler/templates/config.h.in
+++ b/odb-compiler/templates/config.h.in
@@ -5,6 +5,7 @@
 #define ODBCOMPILER_PLATFORM_${ODBCOMPILER_PLATFORM}
 #define ODBCOMPILER_${ODBCOMPILER_LIB_TYPE}
 
+#cmakedefine ODBCOMPILER_AST_SANITY_CHECK
 #cmakedefine ODBCOMPILER_DOT_EXPORT
 #cmakedefine ODBCOMPILER_VERBOSE_BISON
 #cmakedefine ODBCOMPILER_VERBOSE_FLEX
