Working on logging again

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,13 +64,13 @@ if (ODB_TESTS)
     add_subdirectory ("odb-tests")
 endif ()
 
-add_subdirectory ("thirdparty/gperf-3.1")
+#add_subdirectory ("thirdparty/gperf-3.1")
 add_subdirectory ("odb-sdk")
-add_subdirectory ("odb-compiler")
-add_subdirectory ("odb-cli")
-add_subdirectory ("odb-resgen")
-add_subdirectory ("odb-runtime")
-add_subdirectory ("odb-plugins")
+#add_subdirectory ("odb-compiler")
+#add_subdirectory ("odb-cli")
+#add_subdirectory ("odb-resgen")
+#add_subdirectory ("odb-runtime")
+#add_subdirectory ("odb-plugins")
 if (ODB_EDITOR)
     #add_subdirectory ("odb-editor")
 endif ()
